# geo-pres

./: .gitignore  Cargo.toml  LICENSE  README.md  aeiou.patch  bun.lockb  dane.csv  package-lock.json  package.json  parser.py
data/: README  custom_content.gep  dane.csv
data/fonts/: README
data/icons/: Attribution.txt  License.txt
data/voivodeships/: remove-background.ps1  remove-background.sh
pres_gen/: README.md  main.ts  package.json
src/: config.ts  image-editor.ts  image_editor.rs  index.ts  levenshtein_distance.ts  lexer.rs  logger.rs  logger.ts  main.rs  parser.rs  parser.ts  paths.rs  pptx-gen.ts  pres_gen.rs  scraper.rs  slides_gen.rs  types.ts  utils.rs  utils.ts  wiki-scraper.ts
