[package]
name = "geo-pres"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.30"
image = { version = "0.25.6", features = ["png", "jpeg", "webp"] }
imageproc = "0.25.0"
regex = "1.11.1"
reqwest = "0.12.22"
resvg = { version = "0.45.1", features = ["image-webp", "text", "system-fonts"] }
tokio = { version = "1.46.1", features = ["full"] }
